third_party/move/move-compiler-v2/tests/lambda-lifting/pattern.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda-lifting/pattern.move:15:23
   │
15 │         consume(s, x, |S{x}, _y| { let y = x; x + y})
   │                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
